--- a/TODO
+++ b/TODO
@@ -76,5 +76,12 @@ text, but doesn't show comments
   (or adding user) layouts. See marginnote, pdfcomment, the todonotes package
   etc. 
 
+* silent option does not shut up the summary. See if we want that, and if we
+would like to add values to this option (like silent={log,tty,summary,all}
+etc. 
+
+* If babel is loaded, follow the language automatically (very neat !). Should
+  be trivial to do; have a look at \selectlanguage.
+
 * Revoir les cas de noexpand/expandafter, à simplifier avec \let\foo\relax
 pour éviter l'expansion
