Fix broken reference

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -755,7 +755,7 @@
 % \begin{option}{area}
 %   A \fixme note's ``area'' may replace the page number in the list of
 %   fixmes or in the index (see sections \sectionref{sec:code:contentsline}
-%   and \sectionref{sec:code:layoutmacros}).
+%   and \sectionref{sec:code:contentslinelayout}).
 %    \begin{macrocode}
 \@fxdefinecmdkey{lox}{area}{}
 %    \end{macrocode}
@@ -1154,7 +1154,7 @@
 %   \end{option}
 % \end{macro}
 %
-% \subsubsubsection{Contents line}
+% \subsubsubsection{Contents line\label{sec:code:contentslinelayout}}
 % \begin{macro}{\FXLayoutContentsLine}
 %   \marg{type}\marg{author}\marg{note}\\
 %   This one is not registered like the others because it is always active and
