--- a/fixme.dtx
+++ b/fixme.dtx
@@ -729,7 +729,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsection{Preliminary stuff}
+% \subsection{List macros}
 % \begin{option}{area}
 %   A \fixme note's ``area'' may replace the page number in the list of
 %   fixmes or in the index (see sections \sectionref{sec:code:contentsline}
@@ -738,8 +738,6 @@
 \@fxdefinecmdkey{lox}{area}{}
 %    \end{macrocode}
 % \end{option}
-%
-% \subsection{List macros}
 % \subsubsection{Contents lines\label{sec:code:contentsline}}
 % \begin{macro}{\l@fixme}
 %   We use the same layout as for the list of figures.
@@ -940,7 +938,7 @@
 %  \end{macro}
 % \end{macro}
 %
-% \subsubsection{Generic implementation}
+% \subsubsection{Status/class-dependent implementations}
 % \begin{macro}{\lox@final}
 %   \begin{macro}{\lox@draft}
 %     In order to prevent the List of Fixme's heading from being generated
@@ -1016,21 +1014,24 @@
 % \subsubsubsection{Footnote}
 % \begin{macro}{\FXLayoutFootnote}
 %   \begin{option}{footnote}
-%     \begin{macro}{\@fx@layout@footnote}
-%       \marg{type}\marg{author}\marg{note}
+%     \begin{option}{nofootnote}
+%       \begin{macro}{\@fx@layout@footnote}
+%         \marg{type}\marg{author}\marg{note}
 %    \begin{macrocode}
 \newcommand*\FXLayoutFootnote[3]{\footnote{#2 \@nameuse{fx#1name}: #3}}
 \FXRegisterLayout{footnote}{\FXLayoutFootnote}
 %    \end{macrocode}
-%     \end{macro}
+%       \end{macro}
+%     \end{option}
 %   \end{option}
 % \end{macro}
 %
 % \subsubsubsection{Margin}
 % \begin{macro}{\FXLayoutMargin}
 %   \begin{option}{margin}
-%     \begin{macro}{\@fx@layout@margin}
-%       \marg{type}\marg{author}\marg{note}\\
+%     \begin{option}{nomargin}
+%       \begin{macro}{\@fx@layout@margin}
+%         \marg{type}\marg{author}\marg{note}\\
 %    \begin{macrocode}
 \newcommand*\FXLayoutMargin[3]{%
   \marginpar[\footnotesize\raggedleft#2 \@nameuse{fx#1name}: #3]{%
@@ -1043,15 +1044,17 @@
     \fx@layout@marginclue{false}}]{%
     margin}{\FXLayoutMargin}
 %    \end{macrocode}
-%     \end{macro}
+%       \end{macro}
+%     \end{option}
 %   \end{option}
 % \end{macro}
 %
 % \subsubsubsection{Margin clue}
 % \begin{macro}{\FXLayoutMarginCLue}
 %   \begin{option}{marginclue}
-%     \begin{macro}{\@fx@layout@marginclue}
-%       \marg{type}\marg{author}\marg{note}
+%     \begin{option}{nomarginclue}
+%       \begin{macro}{\@fx@layout@marginclue}
+%         \marg{type}\marg{author}\marg{note}
 %    \begin{macrocode}
 \newcommand*\FXLayoutMarginClue[3]{%
   \marginpar[\footnotesize\raggedleft#2 \@nameuse{fx#1name}!]{%
@@ -1064,20 +1067,23 @@
     \fx@layout@margin{false}}]{%
     marginclue}{\FXLayoutMarginClue}
 %    \end{macrocode}
-%     \end{macro}
+%       \end{macro}
+%     \end{option}
 %   \end{option}
 % \end{macro}
 %
 % \subsubsubsection{Inline}
 % \begin{macro}{\FXLayoutInline}
 %   \begin{option}{inline}
-%     \begin{macro}{\@fx@layout@inline}
-%       \marg{type}\marg{author}\marg{note}
+%     \begin{option}{noinline}
+%       \begin{macro}{\@fx@layout@inline}
+%         \marg{type}\marg{author}\marg{note}
 %    \begin{macrocode}
 \newcommand*\FXLayoutInline[3]{#2 \@nameuse{fx#1name}: #3}
 \FXRegisterLayout{inline}{\FXLayoutInline}
 %    \end{macrocode}
-%     \end{macro}
+%       \end{macro}
+%     \end{option}
 %   \end{option}
 % \end{macro}
 %
@@ -1119,8 +1125,9 @@
 % \end{macro}
 % \begin{macro}{\FXLayoutIndex}
 %   \begin{option}{index}
-%     \begin{macro}{\@fx@layout@index}
-%       \marg{type}\marg{author}\marg{note}
+%     \begin{option}{noindex}
+%       \begin{macro}{\@fx@layout@index}
+%         \marg{type}\marg{author}\marg{note}
 %    \begin{macrocode}
 \newcommand*\FXLayoutIndex[3]{%
   \index{***@\fixmeindexname:%
@@ -1128,7 +1135,8 @@
     !\@nameuse{thefx#1count}: #3}}
 \FXRegisterLayout{index}{\FXLayoutIndex}
 %    \end{macrocode}
-%     \end{macro}
+%       \end{macro}
+%     \end{option}
 %   \end{option}
 % \end{macro}
 %
@@ -1319,9 +1327,9 @@
 %
 % \subsubsection{Non fatal notes\label{sec:code:nonfatalnotes}}
 % The generic mechanism below applies only to \fixme notes, warnings and
-% errors. Fatal notes are handled in the next section.
+% errors. Fatal notes are handled in \sectionref{sec:code:fatalnotes}.
 %
-% \subsubsubsection{Standard notes}
+% \subsubsubsection{Status-dependent implementation}
 % \begin{macro}{\@@fxnote@final}
 %   \begin{macro}{\@@fxnote@draft}
 %     \marg{type}\marg{note}
@@ -1394,7 +1402,7 @@
 % Fatal notes can't be handled in exactly the same generic way as the others
 % because their behavior differs in \texttt{final} mode.\par
 %
-% \subsubsubsection{Low-level implementation\label{sec:code:fatalnotes}}
+% \subsubsubsection{Status-dependent implementation\label{sec:code:fatalnotes}}
 % \begin{macro}{\@@fxfatal@final}
 %   \begin{macro}{\@@fxfatal@draft}
 %     \marg{note}\\
@@ -1442,7 +1450,7 @@
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\fixme}
-%   \oarg{options}\marg{note}
+%   \oarg{options}\marg{note}\\
 %   Deprecate \cs{fixme}:
 %    \begin{macrocode}
 \DeclareRobustCommand\fixme{%
@@ -1468,7 +1476,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsubsection{\texttt{final} and \texttt{draft} versions}
+% \subsubsection{Status-dependent implementation}
 % \fixme environments are always laid out inline. The environment's summary
 % is laid out by the corresponding macro, but the \texttt{inline} layout is
 % disabled (this is as easy as appending \texttt{noinline} at the end of the
@@ -1502,7 +1510,7 @@
 %   \end{macro}
 % \end{macro}
 %
-% \subsubsection{User-level environments}
+% \subsubsection{User-level interface}
 % \begin{macro}{\@fxdefineenvironment}
 %   \marg{type}\\
 %   This command defines \fixme environments in a generic way:
