Fix missing fatal indexname

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1114,10 +1114,10 @@
 %     \begin{macro}{\fxerrorsubidx}
 %       \begin{macro}{\fxfatalsubidx}
 %    \begin{macrocode}
-\newcommand*\fxnotesubidx{**a}
-\newcommand*\fxwarningsubidx{**b}
-\newcommand*\fxerrorsubidx{**c}
-\newcommand*\fxfatalsubidx{}
+\newcommand*\fxnotesubidx{***a}
+\newcommand*\fxwarningsubidx{***b}
+\newcommand*\fxerrorsubidx{***c}
+\newcommand*\fxfatalsubidx{***d}
 %    \end{macrocode}
 %       \end{macro}
 %     \end{macro}
