--- a/fixme.dtx
+++ b/fixme.dtx
@@ -638,6 +638,7 @@
 % \end{macro}
 %
 % \subsection{Utilities}
+% \subsubsection{Miscellaneous}
 % \begin{macro}{\@fxcsstring}
 %   \marg{name}\\
 %   Stringify a control sequence name:
@@ -938,7 +939,7 @@
 %  \end{macro}
 % \end{macro}
 %
-% \subsubsection{Status/class-dependent implementations}
+% \subsubsection{Status/class-dependent implementation}
 % \begin{macro}{\lox@final}
 %   \begin{macro}{\lox@draft}
 %     In order to prevent the List of Fixme's heading from being generated
